--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "js-clean-code",
   "version": "0.1.0",
+  "title": "Clean Code JS ⚛",
   "private": true,
   "dependencies": {
+    "@kentcdodds/react-workshop-app": "^2.17.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "chalk": "^4.1.0",
+    "codegen.macro": "^4.0.0",
+    "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "^4.0.0-next.98"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,16 +24,22 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "babel": {
+    "presets": [
+      "babel-preset-react-app"
+    ]
+  },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 edge versions"
+    ],
+    "production": [
+      ">1%",
+      "last 4 versions",
+      "Firefox ESR",
+      "not ie < 11"
     ]
   }
 }
